# GODAR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct  SConstruct_generic  citation.cff  experiences  experiencesGOOD  init.sh  input  input_file  input_restart  input_restart_generic  namelist.nml  namelistSIM  namelist_generic.nml  start.sh  start_generic.sh
datetime/: SConscript
generic/: SConstruct_generic  input_generic  input_restart_generic  namelist_generic.nml  start_generic.sh
godarCMakeFiles/: crayFLAGS.cmake  fortranENV.cmake  gfortranFLAGS.cmake  intelFLAGS.cmake
kdtree/: SConscript  kdtree_mod.f90
model/inc/: CB_bond.h  CB_const.h  CB_forcings.h  CB_mpi.h  CB_options.h  CB_thermo_dym.h  CB_thermo_forcing.h  CB_thermo_var.h  CB_variables.h  parameter.h
model/src/: bonds.f90  boundaries.f90  contact_forces.f90  diagnostics_calc.f90  diagnostics_ini_io.f90  diagnostics_mpi.f90  diagnostics_outputs.f90  diagnostics_utils.f90  forcing.f90  godar.f90  ini_get.f90  integration.f90  mpi_coms.f90  par_get.f90  physics.f90  reset.f90  stepper.f90  test.f90  thermo.f90
pkg/kdtree/: global_kdtree.f90  kdtree_utils.f90
pkg/mpi/: mpi_counts_mod.f90
plots/: files.py  init.py  init1.py  init2.py  scaling.py  test.py  video.py
src/: CB_bond.h  CB_const.h  CB_diagnostics.h  CB_forcings.h  CB_mpi.h  CB_numerics.h  CB_options.h  CB_variables.h  SConscript  bonds.f90  boundaries.f90  compaction.f90  contact_forces.f90  damping,f90  damping.f90  diagnostics.f90  diagnostics_calc.f90  diagnostics_ini_io.f90  diagnostics_mpi.f90  diagnostics_outputs.f90  forcing.f90  ice.f90  ini_get.f90  integration.f90  kdtree_utils.f90  mpi_coms.f90  par_get.f90  parameter.h  particules_init.f90  physics.f90  physics_bonds.f90  reset.f90  ridging.f90  sea_ice_post.f90  stepper.f90  test.f90
tools/: README.md  setup.py
tools/analysis/: monte_carlo.py  void_ratio.py
tools/init/: duplication_2nd-plate.py  gridded_placement.py  init2.py
tools/plotter/: figures.py  video.py  void_ratios.py
tools/tests/: test.py
tools/utils/: files.py
utils/: 2nd-plate.py  args.txt  duplication.sh  init.py  init.sh  run_init.sh  run_python.sh  run_video.sh
